tests/negative/syntax/unfinished-string/err.expected
ERROR:
Unfinished string literal at test.smol:5:24-5:29:
         4 |     fn main() Unit {
         5 |         var x String = "foo\
           |                        ^^^^^
         6 |         n";
